package org.example;

public class Finished {
}
