package org.example;

public class Paused {
}
